# polars_investigation

./: .gitignore  Dockerfile  filter-1_2.csv  filter.csv  group.csv  is_in.csv  join.csv  pyproject.toml  read_parquet.csv  visualize_diagrams.ipynb
polars_investigation/: compare_pandas_polars.ipynb  get_data.py  group.py  join_data.py  memory.py  paths.py  pool.py  read_parquet.py
polars_investigation/dataframe_operations/: base.py  dask.py  duckdb.py  modin.py  pandas.py  polars.py  pyspark.py
polars_investigation/entrypoints/: common.py  run_filter_benchmark.py  run_groupby_benchmark.py  run_is_in_benchmark.py  run_join_benchmark.py  run_read_parquet_benchmark.py
tests/: test_filter.py  test_groupby.py  test_is_in.py  test_join.py  test_pandas_operations.py
